--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "buffer": "^6.0.3",
     "expo": "~50.0.14",
+    "expo-crypto": "^12.8.1",
     "expo-status-bar": "~1.11.1",
+    "gun": "github:amark/gun",
+    "gun-rebuild": "github:bmatusiak/gun-rebuild",
+    "gun-rebuild-sea": "github:bmatusiak/gun-rebuild-sea",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-webview": "^13.6.4",
+    "react-native-webview-crypto": "^0.0.25",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
