--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~50.0.14",
+    "expo-constants": "^15.4.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-autoheight-webview": "^1.6.5",
+    "react-native-webview": "^13.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
